<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="title_hello" translatable="false">Привет, Практикум</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="write_support" translatable="false">Написать в поддержку</string>
    <string name="page_search" translatable="false">Страница поиска</string>
    <string name="media_library_string" translatable="false">Медиатека</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="text_share_app" translatable="false">Привет! Попробуй этот курс по андроид разработке: https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email" translatable="false">mahmadshom1712@yandex.ru</string>
    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="nothing_found" translatable="false">Нечего не нашлось</string>
    <string name="server_error" translatable="false">Проблемы со связью\n\nЗагрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="refresh" translatable="false">Обновить</string>
    <string name="clear_History">Очистить историю</string>
    <string name="search_you">Вы искали</string>
    <string name="back">Назад</string>
    <string name="album">Альбом</string>
    <string name="Year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="Сountry">Страна</string>
</resources>