<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_root"
    android:orientation="vertical"
    style="@style/LinearLayoutMainStyle"
    >


    <com.google.android.material.appbar.MaterialToolbar
        app:title="@string/app_name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        app:titleTextColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/search_button"
        android:text="@string/search"
        app:icon="@drawable/icon_search"

         />


    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/media_library_button"
        android:text="@string/media_library"
        app:icon="@drawable/icon_media_library"
        />


    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/settings_button"
        android:text="@string/settings"
        app:icon="@drawable/icon_settings"

        />


</LinearLayout>