<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        >


        <com.google.android.material.button.MaterialButton
           android:id="@+id/settings_button_back"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:gravity="start|center_vertical"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/icon_back"
            app:iconTint="@color/black" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="UseSwitchCompatOrMaterialXml">


        </Switch>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|center_vertical"
            android:text="@string/share_app"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"

            app:backgroundTint="@color/white"
            app:icon="@drawable/icon_share"
            app:iconGravity="end"
            app:iconPadding="50dp"
            app:iconTint="@color/black" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|center_vertical"
            android:text="@string/write_support"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"

            app:backgroundTint="@color/white"
            app:icon="@drawable/icon_support"
            app:iconGravity="end"
            app:iconTint="@color/black" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|center_vertical"
            android:text="@string/write_support"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"

            app:backgroundTint="@color/white"
            app:icon="@drawable/icon_arrow_forward"
            app:iconGravity="end"
            app:iconTint="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>