<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_activity_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity"
    style="@style/SearchScreenStyle"

    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_button_back"
        style="@style/ButtonSettingsStyle"
        android:layout_marginTop="4dp"
        app:contentInsetStartWithNavigation="2dp"
        app:navigationIcon="@drawable/icon_back"
        app:title="@string/search"
        android:paddingBottom="7dp"

        />

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    >



    <EditText
        android:id="@+id/search_edit_textId"
        android:autofillHints="AUTOFILL_HINT_NOT_APPLICABLE"
        android:drawableStart="@drawable/search_icon_mini"
        android:background="@drawable/bg_search_field"
        android:hint="@string/search"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        style="@style/ExitTextStyle"
        />

    <ImageButton
        android:id="@+id/button_clear_id"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_gravity="end|center_vertical"
        android:importantForAccessibility="no"
        android:src="@drawable/clear_icon"
        android:background="@color/clear_gray"
        android:layout_marginEnd="12dp"
        android:visibility="gone"
        />


</FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        >

        <LinearLayout
            android:id="@+id/placeholder_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:layout_marginTop="89dp"


            android:gravity="center"
            android:orientation="vertical"

            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/placeholderImage"
                style="@style/PlaceholderImageStyle"
                android:src="@drawable/nothing_found_img"
                />

            <TextView
                android:id="@+id/placeholderMessage"
                tools:text="@string/nothing_found"
                style="@style/NothingFoundStyle"
                 />

            <Button
                android:id="@+id/refreshButton"
                android:text="@string/refresh"
                style="@style/RefreshButtonStyle"
                tools:visibility="visible"
                android:textAllCaps="false"
                />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </FrameLayout>

</LinearLayout>